# semantic-fusion-python

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md
python/: CMakeLists.txt
python/cnn_interface/: CaffeInterface.i
python/gui/: Gui.i  GuiCuda.i
python/map_interface/: ElasticFusionCuda.i  ElasticFusionInterface.i
python/semantic_fusion/: SemanticFusionCuda.i  SemanticFusionInterface.i
python/utilities/: Array.i  JPEGLoader.i  LogReader.i  OpenNI2Interface.i  Stopwatch.i  ThreadMutexObject.i  Types.i
pythontest/: main.py
src/: main.cpp
src/cnn_interface/: CaffeInterface.cpp  CaffeInterface.h
src/gui/: Gui.cpp  Gui.h
src/map_interface/: ElasticFusionInterface.cpp  ElasticFusionInterface.h
src/semantic_fusion/: SemanticFusionInterface.cpp  SemanticFusionInterface.h
src/utilities/: LogReader.h
